--- a/sokoban.html
+++ b/sokoban.html
@@ -44,9 +44,9 @@
 <!-- All body container -->
 <!-- Second Container: Introduction -->
 <div class="container bg-top text-center">
-    <span id="level"></span>
-    <span id="moves"></span>
-    <span id="message"></span>
+    <span id="level">Level: </span> <br/>
+    <span id="moves"></span> <br/>
+    <span id="message"></span> <br/>
 </div>
 
 
